# todoist-pp

./: main.py  pyproject.toml
