[project]
name = "todoist-pp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.138.1",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.14.2",
    "python-multipart>=0.0.32",
    "sqlmodel>=0.0.39",
    "sse-starlette>=3.4.5",
    "todoist-api-python>=4.0.0",
    "uvicorn[standard]>=0.49.0",
]
